# fastapi-data-service

./: .Dockerfile  .buildinfo  .gitignore  Dockerfile  Dockerfile.consumer  Dockerfile.fastapi  README.md  app.html  consumer.html  curl_guide.html  fastapi_app.html  generate_openapi.py  genindex.html  index.html  modules.html  objects.inv  py-modindex.html  pyproject.toml  search.html  searchindex.js  swagger.html
.doctrees/: app.doctree  consumer.doctree  curl_guide.doctree  environment.pickle  fastapi_app.doctree  index.doctree  modules.doctree  swagger.doctree
.github/workflows/: deploy.yml
_modules/: index.html
_modules/app/: consumer.html  main.html  models.html  schema.html
_modules/consumer/: main.html  models.html  schema.html
_modules/fastapi_app/: main.html  schema.html
_sources/: app.rst.txt  consumer.rst.txt  curl_guide.rst.txt  fastapi_app.rst.txt  index.rst.txt
_static/swagger-ui/: index.html  openapi.json
app/: consumer.py  main.py  models.py  schema.py
app/consumer/: main.py
consumer/: main.py
docs/source/: app.rst  conf.py  curl_guide.rst  index.rst  modules.rst  swagger.rst
fastapi/: main.py
src/consumer/: main.py
src/fastapi/: main.py
src/fastapi_app/: main.py
src/utils/: gcp_diagram.py  generate_openapi.py
terraform/: main.tf  variables.tf
tests/: test_api.py  test_consumer.py  test_fastapi.py  test_main.py
