[tool.poetry]
name = "fastapi-data-service"
version = "0.1.0"
description = ""
authors = ["Yuri Chernushenko <y.chernushenko@gmail.com>"]
readme = "README.md"

packages = [
    { include = "fastapi_app", from = "src" },
    { include = "consumer", from = "src" }
]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.115.4"
sqlalchemy = "^2.0.36"
pydantic = "^2.9.2"
uvicorn = "^0.32.0"
psycopg2-binary = "^2.9.10"
statistics = "^1.0.3.5"
pytz = "^2024.2"
sphinx-autodoc-typehints = "^2.5.0"
google-cloud-storage = "^2.18.2"
google-cloud-pubsub = "^2.26.1"
cloud-sql-python-connector = "^1.13.0"
pg8000 = "^1.31.2"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
pytest-asyncio = "^0.24.0"
sphinx = "^8.1.3"
httpx = "^0.27.2"
pytest-mock = "^3.14.0"
diagrams = "^0.23.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
